commented out some links

--- a/_config.yml
+++ b/_config.yml
@@ -69,9 +69,9 @@ author:
 social-network-links:
   rss: true
   email: "pyh1@williams.edu"
-  facebook: deanattali
-  github: 20pyh1
-  twitter: do not contact me on twitter
+ # facebook: deanattali
+  #github: 20pyh1
+  #twitter: do not contact me on twitter
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
