--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: "/beautiful-jekyll"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Phoebe Huang
+title: Phoebe Huang yeet
 
 # Short description of your site
 description: HCI, here we go!
